# horizon-hpe3par-ui

./: MANIFEST.in  README.md  README.rst  settings.json  setup.cfg  setup.py
horizon_hpe3par/: overrides.py
horizon_hpe3par/api/: cinder.py  hpe3par_flash_array.py
horizon_hpe3par/enabled/: _9999_pure_panel.py
horizon_hpe3par/hpe3par_panel/: panel.py  tables.py  tabs.py  urls.py  views.py
horizon_hpe3par/hpe3par_panel/flasharrays/: tabs.py  urls.py  views.py
horizon_hpe3par/hpe3par_panel/templates/hpe3par_panel/: index.html
horizon_hpe3par/hpe3par_panel/templates/hpe3par_panel/flasharrays/: detail_view.html
horizon_hpe3par/hpe3par_panel/templates/project/volumes/: hpe3par_detail_view.html
horizon_hpe3par/local_settings.d/: _9999_hpe3par_settings.py
