[metadata]
name = horizon_hpe3par
summary = A HPE 3Par Storage panel plugin for OpenStack Dashboard
description-file =
    README.rst
author = chetom
version = 1.0.0
author_email = tomasz_chendynski@polcom.com.pl
home-page = https://github.com/chetom/horizon-hpe3par-ui.git
classifiers = [
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.11

[files]
packages =
    horizon_hpe3par